--- a/css/style.css
+++ b/css/style.css
@@ -138,76 +138,81 @@ input::-webkit-inner-spin-button {
   color: #2d2d2d;
   margin-bottom: 55px; }
 
-.order-box__bar {
+.order-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-bottom: 50px; }
-
-.order-box__step {
-  display: none; }
-  .order-box__step.current {
-    display: block; }
-
-.order-box__button-wrap {
-  margin-top: 70px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex; }
-
-.order-box__button {
-  cursor: pointer;
-  max-width: 185px;
-  width: 100%;
-  font-family: "HelveticaNeueCyr";
-  padding: 15px;
-  font-size: 11.5px;
-  font-weight: 700;
-  line-height: 0.74;
-  text-transform: uppercase;
-  color: #2d2d2d;
-  border-radius: 5px;
-  border: solid 1px #2d2d2d;
-  text-align: center; }
-  .order-box__button.--next span::before {
-    -webkit-transform: translate(0, -50%) rotate(180deg);
-        -ms-transform: translate(0, -50%) rotate(180deg);
-            transform: translate(0, -50%) rotate(180deg); }
-  .order-box__button.--prev {
-    margin-right: 25px; }
-    .order-box__button.--prev span::before {
-      right: initial;
-      left: -10px;
-      -webkit-transform: translate(0, -50%);
-          -ms-transform: translate(0, -50%);
-              transform: translate(0, -50%); }
-  .order-box__button span {
-    position: relative; }
-    .order-box__button span::before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      right: -10px;
-      -webkit-transform: translate(0, -50%);
-          -ms-transform: translate(0, -50%);
-              transform: translate(0, -50%);
-      width: 5px;
-      height: 9px;
-      background: url("../img/icon-arrow.png") no-repeat; }
-  .order-box__button.disabled {
-    cursor: initial;
-    border-color: transparent;
-    background-color: rgba(45, 45, 45, 0.1); }
-  .order-box__button:hover:not(.disabled) {
-    color: #fff;
-    border-color: #ff75b2;
-    background: #ff75b2; }
-    .order-box__button:hover:not(.disabled) span::before {
-      -webkit-filter: contrast(0) brightness(12);
-              filter: contrast(0) brightness(12); }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+  .order-box__bar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-bottom: 50px; }
+  .order-box__step {
+    display: none; }
+    .order-box__step.current {
+      display: block; }
+  .order-box__button-wrap {
+    margin-top: 70px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .order-box__button {
+    cursor: pointer;
+    max-width: 185px;
+    width: 100%;
+    font-family: "HelveticaNeueCyr";
+    padding: 15px;
+    font-size: 11.5px;
+    font-weight: 700;
+    line-height: 0.74;
+    text-transform: uppercase;
+    color: #2d2d2d;
+    border-radius: 5px;
+    border: solid 1px #2d2d2d;
+    text-align: center; }
+    .order-box__button.--next span::before {
+      -webkit-transform: translate(0, -50%) rotate(180deg);
+          -ms-transform: translate(0, -50%) rotate(180deg);
+              transform: translate(0, -50%) rotate(180deg); }
+    .order-box__button.--prev {
+      margin-right: 25px; }
+      .order-box__button.--prev span::before {
+        right: initial;
+        left: -10px;
+        -webkit-transform: translate(0, -50%);
+            -ms-transform: translate(0, -50%);
+                transform: translate(0, -50%); }
+    .order-box__button span {
+      position: relative; }
+      .order-box__button span::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        right: -10px;
+        -webkit-transform: translate(0, -50%);
+            -ms-transform: translate(0, -50%);
+                transform: translate(0, -50%);
+        width: 5px;
+        height: 9px;
+        background: url("../img/icon-arrow.png") no-repeat; }
+    .order-box__button.disabled {
+      cursor: initial;
+      border-color: transparent;
+      background-color: rgba(45, 45, 45, 0.1); }
+    .order-box__button:hover:not(.disabled) {
+      color: #fff;
+      border-color: #ff75b2;
+      background: #ff75b2; }
+      .order-box__button:hover:not(.disabled) span::before {
+        -webkit-filter: contrast(0) brightness(12);
+                filter: contrast(0) brightness(12); }
 
 .item-bar {
   -webkit-box-flex: 1;
@@ -640,7 +645,21 @@ input::-webkit-inner-spin-button {
     letter-spacing: 1px;
     border-bottom: 1px solid rgba(45, 45, 45, 0.2); }
   .order-box__bar {
-    display: none; }
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 0; }
+    .order-box__bar .item-bar {
+      margin-top: 0;
+      margin-bottom: 20px; }
+      .order-box__bar .item-bar:first-child {
+        margin-top: 35px; }
+      .order-box__bar .item-bar:last-child {
+        margin-bottom: 0; }
   .order-box__button {
     padding: 0%;
     width: initial;
@@ -690,7 +709,7 @@ input::-webkit-inner-spin-button {
           -webkit-filter: none;
                   filter: none; }
   .order-box__button-wrap {
-    margin-top: 0;
+    margin-top: 20px;
     padding-top: 20px;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
